feat: add "PUT /services/{serviceId}"
